# qt6-static-helloworld

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  configure.sh  execute.sh
src/: MyWindow.cpp  MyWindow.h  main.cpp
